@@ -35,6 +35,7 @@ rnfisabelian(nf.pol, T)
 rnfisabelian(nf, T)
 rnfisabelian(a^2+1,5*x^3+2)
 rnfisabelian(4*a^2+1, 9*x^2 + (12*a+3)*x + 2*a)
+rnfisabelian(y^4+2,polsubcyclo(13,6))
 
 pol = y^3+y^2-2*y-1;
 bnf = bnfinit(pol);
